pretrained model for sentences sentiment analysis

--- a/quicktour.ipynb
+++ b/quicktour.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "efc7132b",
+   "id": "5afc294e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-14T13:55:11.251831Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "695dccb5",
+   "id": "7ed75004",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-14T13:58:00.680073Z",
@@ -97,8 +97,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "81202341",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-14T14:06:05.615519Z",
+     "start_time": "2022-07-14T14:06:05.466933Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9991381168365479}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier('I am neither happy nor sad at the moment!!!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "15c6ebb2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-14T14:09:35.084806Z",
+     "start_time": "2022-07-14T14:09:35.017824Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label: POSITIVE, score: 0.997\n",
+      "label: POSITIVE, score: 0.998\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = classifier(['I am an RCB fan', 'I am very normal right now'])\n",
+    "\n",
+    "for res in results:\n",
+    "    print(f\"label: {res['label']}, score: {round(res['score'],3)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a5c7af0e",
+   "id": "9908b699",
    "metadata": {},
    "outputs": [],
    "source": []
