--- a/fineTunePretrainedModel.ipynb
+++ b/fineTunePretrainedModel.ipynb
@@ -2,23 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "90f44bca",
+   "execution_count": 2,
+   "id": "0a229d52",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T09:21:42.989782Z",
-     "start_time": "2022-07-15T09:21:33.012557Z"
+     "end_time": "2022-07-15T11:11:06.492374Z",
+     "start_time": "2022-07-15T11:11:05.449380Z"
     }
    },
    "outputs": [],
    "source": [
-    "from transformers import pipeline"
+    "from transformers import pipeline\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e5d5a603",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-15T11:13:02.885170Z",
+     "start_time": "2022-07-15T11:13:02.866920Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "input_data = pd.read_csv('spam_collection.txt', sep='\\t', header=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "13ffc372",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-15T11:13:03.414446Z",
+     "start_time": "2022-07-15T11:13:03.399551Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0                                                  1\n",
+       "0  ham  Go until jurong point, crazy.. Available only ..."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_data.head(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8c39f6",
+   "id": "a9c7ccee",
    "metadata": {},
    "outputs": [],
    "source": []
