--- a/fineTunePretrainedModel.ipynb
+++ b/fineTunePretrainedModel.ipynb
@@ -2,43 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0a229d52",
+   "execution_count": 17,
+   "id": "fc6f616c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:11:06.492374Z",
-     "start_time": "2022-07-15T11:11:05.449380Z"
+     "end_time": "2022-07-15T11:24:43.293147Z",
+     "start_time": "2022-07-15T11:24:43.276040Z"
     }
    },
    "outputs": [],
    "source": [
     "from transformers import pipeline\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e5d5a603",
+   "execution_count": 12,
+   "id": "e304cdce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:13:02.885170Z",
-     "start_time": "2022-07-15T11:13:02.866920Z"
+     "end_time": "2022-07-15T11:21:07.784363Z",
+     "start_time": "2022-07-15T11:21:07.752370Z"
     }
    },
    "outputs": [],
    "source": [
-    "input_data = pd.read_csv('spam_collection.txt', sep='\\t', header=None)"
+    "input_data = pd.read_csv('spam_collection.txt', sep='\\t', \n",
+    "                         header=None)\n",
+    "input_data.columns = ['label', 'message']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "13ffc372",
+   "execution_count": 13,
+   "id": "f459b73d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:13:03.414446Z",
-     "start_time": "2022-07-15T11:13:03.399551Z"
+     "end_time": "2022-07-15T11:21:08.373018Z",
+     "start_time": "2022-07-15T11:21:08.348488Z"
     }
    },
    "outputs": [
@@ -63,8 +66,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>label</th>\n",
+       "      <th>message</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -78,11 +81,11 @@
        "</div>"
       ],
       "text/plain": [
-       "     0                                                  1\n",
-       "0  ham  Go until jurong point, crazy.. Available only ..."
+       "  label                                            message\n",
+       "0   ham  Go until jurong point, crazy.. Available only ..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,11 +96,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "0ceb8c33",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-15T11:22:26.028897Z",
+     "start_time": "2022-07-15T11:22:26.012387Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# independent features\n",
+    "X = list(input_data['message'])\n",
+    "\n",
+    "# dependent features\n",
+    "y = list(input_data['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ad98ea24",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-15T11:23:40.937800Z",
+     "start_time": "2022-07-15T11:23:40.927311Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# encoding the dependent features\n",
+    "y = list(pd.get_dummies(y, drop_first=True)['spam'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a9c7ccee",
+   "id": "d9b6244e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# train test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X=X)"
+   ]
   }
  ],
  "metadata": {
