--- a/fineTunePretrainedModel.ipynb
+++ b/fineTunePretrainedModel.ipynb
@@ -2,29 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "fc6f616c",
+   "execution_count": 1,
+   "id": "31e8b533",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:24:43.293147Z",
-     "start_time": "2022-07-15T11:24:43.276040Z"
+     "end_time": "2022-07-15T11:33:07.388523Z",
+     "start_time": "2022-07-15T11:33:01.281620Z"
     }
    },
    "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
-    "import pandas as pd\n",
+    "from transformers import pipeline, DistilBertTokenizerFast\n",
+    "import pandas as pd, tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e304cdce",
+   "execution_count": 2,
+   "id": "818da1d8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:21:07.784363Z",
-     "start_time": "2022-07-15T11:21:07.752370Z"
+     "end_time": "2022-07-15T11:33:07.429970Z",
+     "start_time": "2022-07-15T11:33:07.391305Z"
     }
    },
    "outputs": [],
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "f459b73d",
+   "execution_count": 3,
+   "id": "8c2f09b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:21:08.373018Z",
-     "start_time": "2022-07-15T11:21:08.348488Z"
+     "end_time": "2022-07-15T11:33:07.460767Z",
+     "start_time": "2022-07-15T11:33:07.432798Z"
     }
    },
    "outputs": [
@@ -85,7 +85,7 @@
        "0   ham  Go until jurong point, crazy.. Available only ..."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0ceb8c33",
+   "execution_count": 4,
+   "id": "ff203880",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:22:26.028897Z",
-     "start_time": "2022-07-15T11:22:26.012387Z"
+     "end_time": "2022-07-15T11:33:07.476167Z",
+     "start_time": "2022-07-15T11:33:07.461797Z"
     }
    },
    "outputs": [],
@@ -115,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ad98ea24",
+   "execution_count": 5,
+   "id": "edebdf06",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-15T11:23:40.937800Z",
-     "start_time": "2022-07-15T11:23:40.927311Z"
+     "end_time": "2022-07-15T11:33:07.484404Z",
+     "start_time": "2022-07-15T11:33:07.478388Z"
     }
    },
    "outputs": [],
@@ -131,14 +131,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d9b6244e",
-   "metadata": {},
+   "execution_count": 6,
+   "id": "8eb7bdab",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-15T11:33:07.493989Z",
+     "start_time": "2022-07-15T11:33:07.486728Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# train test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X=X)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cbe036b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-15T11:25:58.703104Z",
+     "start_time": "2022-07-15T11:25:58.635641Z"
+    }
+   },
+   "source": [
+    "##### Steps\n",
+    "1. Call the pretrained model\n",
+    "2. Call the tokenizer, since it has to be applied to input\n",
+    "3. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a6c3a63",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-07-15T11:33:01.310Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# call the tokenizer\n",
+    "tokenizer = DistilBertTokenizerFast.from_pretrained('distilbert-base-uncased')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5961c30",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-07-15T11:33:01.311Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_embeddings = tokenizer(X_train, truncation=True, padding=True)\n",
+    "test_embeddings = tokenizer(X_test, truncation=True, padding=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e3e86ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
