--- a/hugging_face_course/basics_of_pipeline.ipynb
+++ b/hugging_face_course/basics_of_pipeline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a50fe093",
+   "id": "c2ccff9f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:31:44.256804Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9ae14d13",
+   "id": "d2a70a80",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:36.683259Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f0cb662b",
+   "id": "f1c1984f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:48.190215Z",
@@ -82,13 +82,102 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e3810a",
+   "id": "45618b89",
    "metadata": {},
    "source": [
     "Three main steps involved when we pass some text to a pipeline:\n",
     "1. The text in preprocessed into a format the model can understand\n",
     "2. The preprocessed inputs are passed to the model\n",
     "3. The predictions of the model are post-processed, so we can make sense of them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "283f2210",
+   "metadata": {},
+   "source": [
+    "Some of the currently available pipelines are:\n",
+    "* feature-extraction (get the vector representation of text)\n",
+    "* fill-mask\n",
+    "* ner (named entity recognition)\n",
+    "* question-answering\n",
+    "* sentiment-analysis\n",
+    "* summarization\n",
+    "* text-generation\n",
+    "* translation\n",
+    "* zero-shot-classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3451de45",
+   "metadata": {},
+   "source": [
+    "##### zero-shot classification\n",
+    "Here we need to classify texts that have not been labelled. This is a common scenario in real-world projects because annotating text is usually time-consuming and requires domain expertise. For this use case, the zero-shot-classification pipeline is very powerful: it allows you to specify which labels to use for the classification, so you do not have to rely on the labels of the pretrained model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c235cfb",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-07-16T17:41:16.100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to facebook/bart-large-mnli (https://huggingface.co/facebook/bart-large-mnli)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "600edee879a34bccb34db21a36fe7b70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.13k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ba05127f749483f90dd93fdfac2ce94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.52G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "classifier_1 = pipeline(\"zero-shot-classification\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8bc7958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier_1(\n",
+    "    \"This is a course about the Transformers library\",\n",
+    "    candidate_labels=[\"education\", \"politics\", \"business\"],\n",
+    ")"
    ]
   }
  ],
