--- a/hugging_face_course/basics_of_pipeline.ipynb
+++ b/hugging_face_course/basics_of_pipeline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2ccff9f",
+   "id": "4fc48d23",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:31:44.256804Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2a70a80",
+   "id": "d1c6fc5f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:36.683259Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1c1984f",
+   "id": "699f654f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:48.190215Z",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45618b89",
+   "id": "5c620088",
    "metadata": {},
    "source": [
     "Three main steps involved when we pass some text to a pipeline:\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "283f2210",
+   "id": "70501801",
    "metadata": {},
    "source": [
     "Some of the currently available pipelines are:\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3451de45",
+   "id": "a82683e9",
    "metadata": {},
    "source": [
     "##### zero-shot classification\n",
@@ -119,11 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8c235cfb",
+   "execution_count": 7,
+   "id": "b4bca0c1",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-07-16T17:41:16.100Z"
+     "end_time": "2022-07-16T17:50:47.844392Z",
+     "start_time": "2022-07-16T17:50:25.843521Z"
     }
    },
    "outputs": [
@@ -133,34 +134,6 @@
      "text": [
       "No model was supplied, defaulted to facebook/bart-large-mnli (https://huggingface.co/facebook/bart-large-mnli)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "600edee879a34bccb34db21a36fe7b70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.13k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ba05127f749483f90dd93fdfac2ce94",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.52G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -169,16 +142,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8bc7958",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "id": "b06c2c91",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T17:49:40.006706Z",
+     "start_time": "2022-07-16T17:49:39.367201Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sequence': 'This is a course about the Transformers library',\n",
+       " 'labels': ['education', 'business', 'politics'],\n",
+       " 'scores': [0.8445992469787598, 0.11197393387556076, 0.04342679679393768]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classifier_1(\n",
     "    \"This is a course about the Transformers library\",\n",
     "    candidate_labels=[\"education\", \"politics\", \"business\"],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fc6a3b7d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T17:49:47.341939Z",
+     "start_time": "2022-07-16T17:49:46.750836Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sequence': 'The economy is may be on a downward trend worldwide',\n",
+       " 'labels': ['business', 'education', 'politics'],\n",
+       " 'scores': [0.9483700394630432, 0.028782233595848083, 0.02284778095781803]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier_1(\n",
+    "    \"The economy is may be on a downward trend worldwide\",\n",
+    "    candidate_labels=[\"education\", \"politics\", \"business\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a0c9f59",
+   "metadata": {},
+   "source": [
+    "##### text generation\n",
+    "The main idea here is to provide a prompt and the model will auto-complete it by generating the remaining text. This is similar to the predictive text feature that is found on many phones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "831f3f35",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T17:54:31.305476Z",
+     "start_time": "2022-07-16T17:51:38.796087Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to gpt2 (https://huggingface.co/gpt2)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e344e1b4bfe46ecaf23bdecd6bb5f15",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/665 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57bb2e1497e24073b0606195bb2871ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/523M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2e986f120814600bd357b4dae4a8de3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/0.99M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f44eb5154364b69a0576d8bd8954896",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9e507cf7b864a6fba285117079b96dc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.29M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "generator = pipeline(\"text-generation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c1e2388e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T17:56:08.106425Z",
+     "start_time": "2022-07-16T17:56:05.752876Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': 'In India you will find more and more of this kind of things in India. We know the answer to the question, how do we get rid of corruption in government?\"\\n\\nThe prime minister recently told a conference in Gujarat it would take a long'},\n",
+       " {'generated_text': 'In India you will find that if the user has to perform this command, the command will just print out the following:\\n\\n/bin/bash\\n\\nAnd you can see that now, no matter what, the new command is working. In'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# num_return_sequences \n",
+    "generator(\"In India you will find\",num_return_sequences = 2, max_lenght=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4a96f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
