text-generation with custom model

--- a/hugging_face_course/basics_of_pipeline.ipynb
+++ b/hugging_face_course/basics_of_pipeline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4fc48d23",
+   "id": "b062810c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:31:44.256804Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d1c6fc5f",
+   "id": "bda69f04",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:36.683259Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "699f654f",
+   "id": "05618ffa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:48.190215Z",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c620088",
+   "id": "1dc02328",
    "metadata": {},
    "source": [
     "Three main steps involved when we pass some text to a pipeline:\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70501801",
+   "id": "dfa24906",
    "metadata": {},
    "source": [
     "Some of the currently available pipelines are:\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a82683e9",
+   "id": "30105bc2",
    "metadata": {},
    "source": [
     "##### zero-shot classification\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b4bca0c1",
+   "id": "8077a3e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:50:47.844392Z",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b06c2c91",
+   "id": "37a29136",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:49:40.006706Z",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fc6a3b7d",
+   "id": "159540a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:49:47.341939Z",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0c9f59",
+   "id": "03b3929d",
    "metadata": {},
    "source": [
     "##### text generation\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "831f3f35",
+   "id": "7a37f384",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:54:31.305476Z",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c1e2388e",
+   "id": "d0bdf371",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:56:08.106425Z",
@@ -335,14 +335,144 @@
     }
    ],
    "source": [
-    "# num_return_sequences \n",
+    "# num_return_sequences will give number of sentences\n",
+    "# max length is the length of each sentence\n",
     "generator(\"In India you will find\",num_return_sequences = 2, max_lenght=15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb86cf2",
+   "metadata": {},
+   "source": [
+    "The previous examples used the default model for the task at hand, but we can use a particular model from Hub to use in a pipeline for a specific task. Let's try the distilgpt2 model!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d0b22906",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T18:01:39.743212Z",
+     "start_time": "2022-07-16T17:59:32.473398Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f8ac7e5fd27c4435b57f35f4dbdc2905",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/762 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42884eb5ce6e4822a301b057583f08d3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/336M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3796e38031b41e6bb295915a8214c6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/0.99M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c1f49e0ea894c799802414c6f5b2c61",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a729730476734c2cb9025e8b0310535e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.29M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "generator_1 = pipeline(\"text-generation\",\n",
+    "                       model = \"distilgpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "83cf27f4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T18:01:49.210063Z",
+     "start_time": "2022-07-16T18:01:47.607232Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': \"In India you will find many cases of sexual assaults in Delhi, even when the police are investigating them, in cases like the case in Delhi, the police have already tried to identify the culprits.\\n\\n\\n\\nThe government's role in identifying\"},\n",
+       " {'generated_text': 'In India you will find much to admire in the Indian media coverage of the latest events at the World Cup. The report mentions that the Indian Government will not be buying \"indo-Pakistani cricket equipment\".\\nThe report comes in response to the'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generator_1(\"In India you will find\",num_return_sequences = 2, max_lenght=15)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4a96f2",
+   "id": "181f8c58",
    "metadata": {},
    "outputs": [],
    "source": []
