--- a/hugging_face_course/basics_of_pipeline.ipynb
+++ b/hugging_face_course/basics_of_pipeline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b062810c",
+   "id": "94bde018",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:31:44.256804Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bda69f04",
+   "id": "6ad9b5b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:36.683259Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05618ffa",
+   "id": "0f3a9a5d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:32:48.190215Z",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc02328",
+   "id": "c091cf60",
    "metadata": {},
    "source": [
     "Three main steps involved when we pass some text to a pipeline:\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa24906",
+   "id": "982df122",
    "metadata": {},
    "source": [
     "Some of the currently available pipelines are:\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30105bc2",
+   "id": "cc5dd40c",
    "metadata": {},
    "source": [
     "##### zero-shot classification\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8077a3e1",
+   "id": "909bcaa0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:50:47.844392Z",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "37a29136",
+   "id": "3c9865cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:49:40.006706Z",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "159540a9",
+   "id": "eb3ec817",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:49:47.341939Z",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b3929d",
+   "id": "98ea10e9",
    "metadata": {},
    "source": [
     "##### text generation\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7a37f384",
+   "id": "346c8dfb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:54:31.305476Z",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0bdf371",
+   "id": "8bdc3905",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T17:56:08.106425Z",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb86cf2",
+   "id": "4d6f7716",
    "metadata": {},
    "source": [
     "The previous examples used the default model for the task at hand, but we can use a particular model from Hub to use in a pipeline for a specific task. Let's try the distilgpt2 model!"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d0b22906",
+   "id": "fa86bfe6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T18:01:39.743212Z",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "83cf27f4",
+   "id": "c01d1c06",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-16T18:01:49.210063Z",
@@ -470,9 +470,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80099be9",
+   "metadata": {},
+   "source": [
+    "##### Mask filling\n",
+    "The idea is to fill in the blanks in a given text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6f1f6b7f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T18:06:24.671469Z",
+     "start_time": "2022-07-16T18:04:28.691933Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to distilroberta-base (https://huggingface.co/distilroberta-base)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a9112e4bf0f428fb68bbcf95f3b15f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/480 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f8f236b295b4d439ccb6fdb91dd5fd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/316M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "846bf2170fa94bc993968eeeda2925bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/878k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48d437729cb64b82b1ee7dbff595ea26",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69d46ffc4e3948aa92ba38012e6bb391",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.29M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unmasker = pipeline(\"fill-mask\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d8ca7905",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-16T18:06:27.990614Z",
+     "start_time": "2022-07-16T18:06:27.910106Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'score': 0.5740700364112854,\n",
+       "  'token': 24347,\n",
+       "  'token_str': ' populous',\n",
+       "  'sequence': 'India is the most populous country'},\n",
+       " {'score': 0.052943311631679535,\n",
+       "  'token': 30002,\n",
+       "  'token_str': ' polluted',\n",
+       "  'sequence': 'India is the most polluted country'}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# top_k argument controls how many possibilities want to be displayed\n",
+    "unmasker(\"India is the most <mask> country\", top_k=2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "181f8c58",
+   "id": "22e89529",
    "metadata": {},
    "outputs": [],
    "source": []
